# TesterApp

./: pyproject.toml
testerapp/: TestInput00.txt  TestInput01.txt  TestInput02.txt  TestInput03.txt  TestOutput00.txt  TestOutput01.txt  testerapp.py
tests/: test_testerapp.py
