[tool.poetry]
name = "TesterApp"
version = "0.1.0"
description = ""
authors = ["Ivan Stimac <ivan.stimac@ericsson.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
